<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey">

        <TextView
            android:id="@+id/minText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_footer_min_value"
            app:layout_constraintBottom_toTopOf="@id/saveButton"
            app:layout_constraintEnd_toStartOf="@+id/radiusSeekBar"
            app:layout_constraintHorizontal_bias="@dimen/bias_half"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/radiusSeekBar"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:max="1000"
            app:layout_constraintEnd_toStartOf="@+id/maxText"
            app:layout_constraintHorizontal_bias="@dimen/bias_half"
            app:layout_constraintStart_toEndOf="@+id/minText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/maxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_footer_max_value"
            app:layout_constraintBottom_toTopOf="@id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/bias_half"
            app:layout_constraintStart_toEndOf="@+id/radiusSeekBar"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_bias="@dimen/bias_half"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiusSeekBar" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/bias_half"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toBottomOf="@+id/radiusSeekBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>